# turfops

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  ENHANCEMENTS.md  README.md  docker-compose.yml  osv-scanner.toml
.github/workflows/: ci.yml  docker-publish.yml  ghcr-retention.yml  supply-chain.yml
backend/: .env.example  Cargo.toml  osv-scanner.toml
backend/.cargo/: audit.toml
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/api/: applications.rs  calendar.rs  dashboard.rs  environmental.rs  gdd.rs  health.rs  historical.rs  mod.rs  nitrogen_budget.rs  plants.rs  profile.rs  recommendations.rs  seasonal_plan.rs  soil_temp_prediction.rs  soil_tests.rs
backend/src/datasources/: homeassistant.rs  mod.rs  openrouter.rs  openweathermap.rs  soildata.rs  weather.rs
backend/src/db/: mod.rs  plant_queries.rs  pool.rs  queries.rs  soil_test_queries.rs
backend/src/db/migrations/: 20240101000000_initial_schema.sql  20240101000001_indexes.sql  20240101000002_add_constraints.sql  20240101000003_recommendation_states.sql  20240101000004_fix_environmental_cache_index.sql  20240101000005_add_npk_and_gdd.sql  20240101000006_seasonal_plan_cache.sql  20240101000007_soil_tests.sql  20260425000000_plants.sql  20260426000000_application_followup.sql  20260613000000_drop_soildata_caches.sql
backend/src/logic/: data_sync.rs  follow_up.rs  gdd.rs  mod.rs  plant_maintenance.rs  seasonal_plan.rs  soil_temp_prediction.rs  soil_test_recommendations.rs  soil_test_thresholds.rs
backend/src/logic/rules/: aeration.rs  application_window.rs  broadleaf_herbicide.rs  disease_common.rs  disease_pressure.rs  engine.rs  fall_fertilization.rs  fall_overseeding.rs  fertilizer.rs  fungicide.rs  gray_leaf_spot.rs  grub_control.rs  heat_stress.rs  irrigation_forecast.rs  mod.rs  mowing_height.rs  pre_emergent.rs  pythium_blight.rs  rain_delay.rs  red_thread.rs  soil_temp_forecast.rs  spring_nitrogen.rs  thresholds.rs
backend/src/models/: application.rs  environmental.rs  forecast.rs  frac_class.rs  gdd.rs  historical.rs  lawn_profile.rs  mod.rs  nitrogen_budget.rs  plant.rs  recommendation.rs  seasonal_plan.rs  soil_temp_prediction.rs  soil_test.rs
config/: config.yaml.example
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AlertCard.tsx  Gauge.tsx  GddWidget.tsx  Layout.tsx  NitrogenBudgetWidget.tsx  PredictionChart.tsx  SoilTempForecastWidget.tsx  TrendChart.tsx  gaugeConfigs.ts
frontend/src/pages/: Applications.tsx  Calendar.tsx  Dashboard.tsx  Environmental.tsx  Landscape.tsx  Recommendations.tsx  SeasonalPlan.tsx  Settings.tsx  SoilTests.tsx
frontend/src/styles/: shared.ts
frontend/src/types/: index.ts
frontend/src/utils/: units.ts
scripts/: pre-commit-checks.sh
src/: app.rs  cli.rs  config.rs  error.rs  main.rs
src/datasources/: homeassistant.rs  mod.rs  openweathermap.rs  soildata.rs
src/db/: connection.rs  migrations.rs  mod.rs  queries.rs
src/logic/: calculations.rs  data_sync.rs  mod.rs
src/logic/rules/: aeration.rs  application_window.rs  disease_pressure.rs  engine.rs  fall_fertilization.rs  fall_overseeding.rs  fertilizer.rs  fungicide.rs  grub_control.rs  heat_stress.rs  irrigation_forecast.rs  mod.rs  pre_emergent.rs  pythium_blight.rs  rain_delay.rs  spring_nitrogen.rs
src/models/: application.rs  environmental.rs  forecast.rs  frac_class.rs  lawn_profile.rs  mod.rs  recommendation.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: calendar.rs  gauge.rs  input.rs  mod.rs
src/ui/screens/: applications.rs  calendar.rs  dashboard.rs  environmental.rs  mod.rs  recommendations.rs  settings.rs
