[package]
name = "turfops"
version = "0.1.0"
edition = "2021"
description = "Lawn care management TUI with data-driven agronomic recommendations"
authors = ["tgrecojr"]

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# Local storage
rusqlite = { version = "0.32", features = ["bundled"] }

# External data sources
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utility
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex-lite = "0.1"
dotenvy = "0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
