[package]
name = "turfops-backend"
version = "0.1.0"
edition = "2021"
description = "TurfOps lawn care management web application"
authors = ["tgrecojr"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "migrate",
    "macros",
] }

# HTTP client (for external datasources)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
