[package]
name = "turfops-backend"
version = "0.1.0"
edition = "2021"
description = "TurfOps lawn care management web application"
authors = ["tgrecojr"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "signal",
] }

# Database
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "migrate",
    "macros",
] }

# HTTP client (for external datasources)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Embedded analytics engine for reading the weather data lake (parquet on mounted FS).
# `bundled` statically compiles libduckdb into the binary (no runtime lib needed);
# `chrono` enables TIMESTAMP/DATE <-> chrono mapping.
duckdb = { version = "1", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional: only used by `cargo run --features dev-env` for loading .env locally.
# Production containers receive env vars from the orchestrator and do not need this.
dotenvy = { version = "0.15", optional = true }

[features]
default = []
dev-env = ["dep:dotenvy"]

[profile.release]
strip = true
lto = true
codegen-units = 1
